creditas-sf/force-app/main/default/objects/FinancialResources__c/FinancialResources__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar as informações de renda e fonte de renda ara pagamento da divida.</description>
    <label>Recurso Financeiro</label>
    <nameField>
        <label>Nome de Recurso Financeiro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recursos Financeiros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>