creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recursos Financeiros</relationshipLabel>
    <relationshipName>Recursos_Financeiros</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>