creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Account_Financial_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Account_Financial_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relações Financeiras</label>
    <referenceTo>AccountFinancialRelationship__c</referenceTo>
    <relationshipLabel>Recursos Financeiros</relationshipLabel>
    <relationshipName>Recursos_Financeiros</relationshipName>
    <type>Lookup</type>
</CustomField>