creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Quantia referente ao registro que está sendo cadastrado</description>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>