creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/AppraisalDate__c.field-meta.xml
<CustomField>
    <fullName>AppraisalDate__c</fullName>
    <description>Data de quando o bem foi avaliado.</description>
    <label>AppraisalDate</label>
    <type>DateTime</type>
</CustomField>