creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>