creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PERSONAL</fullName>
            </value>
            <value>
                <fullName>RENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>