creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço</label>
    <referenceTo>Addresses__c</referenceTo>
    <relationshipLabel>Recursos Financeiros</relationshipLabel>
    <relationshipName>Recursos_Financeiros</relationshipName>
    <type>Lookup</type>
</CustomField>