creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/External_Version__c.field-meta.xml
<CustomField>
    <fullName>External_Version__c</fullName>
    <label>External Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>