creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ExternalAccountTenant__c.field-meta.xml
<CustomField>
    <fullName>ExternalAccountTenant__c</fullName>
    <label>ExternalAccountTenant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>