creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ExternalAccountVersion__c.field-meta.xml
<CustomField>
    <fullName>ExternalAccountVersion__c</fullName>
    <label>ExternalAccountVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>