creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ExternalCodeOrigin__c.field-meta.xml
<CustomField>
    <fullName>ExternalCodeOrigin__c</fullName>
    <externalId>true</externalId>
    <label>Código da Tabela FIPE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>