creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ExternalModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ExternalModifiedBy__c</fullName>
    <label>ExternalModifiedBy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>