creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ExternalTenant__c.field-meta.xml
<CustomField>
    <fullName>ExternalTenant__c</fullName>
    <label>ExternalTenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>creditas-mx</fullName>
            </value>
            <value>
                <fullName>creditas-br</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>