creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/FinancialInstitution__c.field-meta.xml
<CustomField>
    <fullName>FinancialInstitution__c</fullName>
    <label>Instituição Financeira</label>
    <length>100</length>
    <type>Text</type>
</CustomField>