creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ManufacturingYear__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingYear__c</fullName>
    <label>Ano de Fabricação</label>
    <length>50</length>
    <type>Text</type>
</CustomField>