creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>