creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <label>Ano do Modelo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>