creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/MunicipalRegistry__c.field-meta.xml
<CustomField>
    <fullName>MunicipalRegistry__c</fullName>
    <label>Registro Municipal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>