creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Plate__c.field-meta.xml
<CustomField>
    <fullName>Plate__c</fullName>
    <label>Placa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>