creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ProfessionalInfo__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emprego</label>
    <referenceTo>ProfessionalInfo__c</referenceTo>
    <relationshipLabel>Recursos Financeiros</relationshipLabel>
    <relationshipName>Recursos_Financeiros</relationshipName>
    <type>Lookup</type>
</CustomField>