creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ResourceKey__c.field-meta.xml
<CustomField>
    <fullName>ResourceKey__c</fullName>
    <label>ResourceKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>