creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/ResourceKeyType__c.field-meta.xml
<CustomField>
    <fullName>ResourceKeyType__c</fullName>
    <label>Tipo da Chave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEED_NUMBER</fullName>
            </value>
            <value>
                <fullName>RENAVAM</fullName>
            </value>
            <value>
                <fullName>CHASSIS</fullName>
            </value>
            <value>
                <fullName>CERTIFICATE_ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>