creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Origem do valor que está sendo cadastrado</description>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALES</fullName>
            </value>
            <value>
                <fullName>BUSINESSES</fullName>
            </value>
            <value>
                <fullName>INVESTMENT</fullName>
            </value>
            <value>
                <fullName>COMMISSIONS</fullName>
            </value>
            <value>
                <fullName>DONATIONS</fullName>
            </value>
            <value>
                <fullName>REMITTANCES</fullName>
            </value>
            <value>
                <fullName>RAFFLES</fullName>
            </value>
            <value>
                <fullName>SAVINGS</fullName>
            </value>
            <value>
                <fullName>SAVING_FUNDS</fullName>
            </value>
            <value>
                <fullName>THIRD_PARTY_RESOURCES</fullName>
            </value>
            <value>
                <fullName>SALARIES</fullName>
            </value>
            <value>
                <fullName>INHERITANCE</fullName>
            </value>
            <value>
                <fullName>LOANS</fullName>
            </value>
            <value>
                <fullName>SCHOLARSHIPS</fullName>
            </value>
            <value>
                <fullName>FEES</fullName>
            </value>
            <value>
                <fullName>PENSIONS</fullName>
            </value>
            <value>
                <fullName>RENTS</fullName>
            </value>
            <value>
                <fullName>NO_SOURCES</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>