creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Estado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>