creditas-sf/force-app/main/default/objects/FinancialResources__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo do recurso que está sendo registrado</description>
    <label>Tipo de Recurso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MONTHLY_INCOME</fullName>
            </value>
            <value>
                <fullName>PRESUMED_MONTHLY_INCOME</fullName>
            </value>
            <value>
                <fullName>CONFIRMED_MONTHLY_INCOME</fullName>
            </value>
            <value>
                <fullName>NET_MONTHLY_INCOME</fullName>
            </value>
            <value>
                <fullName>HOUSE</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>APARTMENT</fullName>
            </value>
            <value>
                <fullName>LAND</fullName>
            </value>
            <value>
                <fullName>CONDOMINIUM_HOUSE</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL_ROOM</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>MOTORCYCLE</fullName>
            </value>
            <value>
                <fullName>QUADRICYCLE</fullName>
            </value>
            <value>
                <fullName>TRUCK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>