creditas-sf/force-app/main/default/objects/FinancialResources__c/recordTypes/Auto.recordType-meta.xml
<RecordType>
    <fullName>Auto</fullName>
    <active>true</active>
    <label>Auto</label>
</RecordType>