creditas-sf/force-app/main/default/objects/FinancialResources__c/recordTypes/Certificado.recordType-meta.xml
<RecordType>
    <fullName>Certificado</fullName>
    <active>true</active>
    <label>Certificado</label>
</RecordType>