creditas-sf/force-app/main/default/objects/FinancialResources__c/recordTypes/Imovel.recordType-meta.xml
<RecordType>
    <fullName>Imovel</fullName>
    <active>true</active>
    <label>Imóvel</label>
</RecordType>