creditas-sf/force-app/main/default/objects/FinancialResources__c/recordTypes/Outros.recordType-meta.xml
<RecordType>
    <fullName>Outros</fullName>
    <active>true</active>
    <label>Outros</label>
</RecordType>