creditas-sf/force-app/main/default/objects/FinancialResources__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>ResourceKeyType__c</columns>
    <columns>ResourceKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>